maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:116: error: missing arguments for method aMurNord in class JediEscaper;
follow this method with `_' if you want to treat it as a partially applied function
  if (!aMurNord) {
       ^